# auth/go/model_post_stats_response.go
@@ -1,0 +1,9 @@
+package auth
+
+type PostStatsResponse struct {
+	PostId string `json:"post_id,omitempty"`
+
+	Likes uint64 `json:"likes,omitempty"`
+
+	Views uint64 `json:"views,omitempty"`
+}
